--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -1,3 +1,9 @@
 .ins-app-navbar {
     width: 100%;
 }
+.btn-primary {
+    background-color: $secondary;
+}
+.btn-white {
+    background-color: white;
+}
