--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -1,7 +1,9 @@
 .width-100 {
     width: 100%;
 }
-
+.w-medium {
+    font-weight: 500;
+}
 .align-v {
     align-items: center;
 }
@@ -23,7 +25,7 @@
 
 .pt-sm,
 .pv-sm {
-    padding-top: 6px;
+    padding-top: 8px;
 }
 
 .pt-1,
@@ -64,6 +66,10 @@
     padding-bottom: 100px;
 }
 
+.pb-sm,
+.pv-sm {
+    padding-bottom: 6px;
+}
 .pb-1,
 .pv-1 {
     padding-bottom: 12px;
@@ -159,6 +165,10 @@
     margin-top: 72px;
 }
 
+.mb-sm,
+.mv-sm {
+    margin-bottom: 6px;
+}
 .mb-1,
 .mv-1 {
     margin-bottom: 12px;
