--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -116,6 +116,11 @@
     padding-left: 36px;
 }
 
+.pl-4,
+.ph-4 {
+    padding-left: 48px;
+}
+
 .pr-1,
 .ph-1 {
     padding-right: 12px;
@@ -129,6 +134,11 @@
 .pr-3,
 .ph-3 {
     padding-right: 36px;
+}
+
+.pr-4,
+.ph-4 {
+    padding-right: 48px;
 }
 
 /* MARGIN VERTICAL */
