--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,9 +1,10 @@
 // colors
-$primary: rgb(228, 55, 55);
-$primaryHover: #85e2a7;
-$primaryDarker: #5aac78;
+$primary: rgb(247, 68, 68);
+$primaryHover: rgb(228, 55, 55);
+$primaryDarker: rgb(206, 49, 49);
 $primaryLight: #FF9999;
 $secondary: #00b3b3;
+$secondaryHover: #08cccc;
 $dark: #444;
 $clightgray: #EEE;
 
