--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -1,6 +1,7 @@
 .width-100 {
     width: 100%;
 }
+.w-15 { width: 15%; }
 .w-medium {
     font-weight: 500;
 }
@@ -25,215 +26,222 @@
 
 .pt-sm,
 .pv-sm {
-    padding-top: 8px;
+    padding-top: 6px!important;
 }
 
 .pt-1,
 .pv-1 {
-    padding-top: 12px;
+    padding-top: 12px!important;
 }
 
 .pt-2,
 .pv-2 {
-    padding-top: 24px;
+    padding-top: 24px!important;
 }
 
 .pt-3,
 .pv-3 {
-    padding-top: 36px;
+    padding-top: 36px!important;
 }
 
 .pt-4,
 .pv-4 {
-    padding-top: 48px;
+    padding-top: 48px!important;
 }
 
 .pt-5,
 .pv-5 {
-    padding-top: 60px;
+    padding-top: 60px!important;
 }
 
 .pt-6,
 .pv-6 {
-    padding-top: 80px;
+    padding-top: 80px!important;
 }
 .pt-7,
 .pv-7 {
-    padding-top: 100px;
+    padding-top: 100px!important;
 }
 .pb-7,
 .pv-7 {
-    padding-bottom: 100px;
+    padding-bottom: 100px!important;
 }
 
 .pb-sm,
 .pv-sm {
-    padding-bottom: 6px;
+    padding-bottom: 6px!important;
 }
 .pb-1,
 .pv-1 {
-    padding-bottom: 12px;
+    padding-bottom: 12px!important;
 }
 
 .pb-2,
 .pv-2 {
-    padding-bottom: 24px;
+    padding-bottom: 24px!important;
 }
 
 .pb-3,
 .pv-3 {
-    padding-bottom: 36px;
+    padding-bottom: 36px!important;
 }
 
 .pb-4,
 .pv-4 {
-    padding-bottom: 48px;
+    padding-bottom: 48px!important;
 }
 
 .pb-5,
 .pv-5 {
-    padding-bottom: 60px;
+    padding-bottom: 60px!important;
 }
 
 .pb-6,
 .pv-6 {
-    padding-bottom: 80px;
+    padding-bottom: 80px!important;
 }
 
 /* PADDING HORIZONTAL */
 .pl-1,
 .ph-1 {
-    padding-left: 12px;
+    padding-left: 12px!important;
 }
 
 .pl-2,
 .ph-2 {
-    padding-left: 24px;
+    padding-left: 24px!important;
 }
 
 .pl-3,
 .ph-3 {
-    padding-left: 36px;
+    padding-left: 36px!important;
 }
 
 .pl-4,
 .ph-4 {
-    padding-left: 48px;
+    padding-left: 48px!important;
 }
 
 .pr-1,
 .ph-1 {
-    padding-right: 12px;
+    padding-right: 12px!important;
 }
 
 .pr-2,
 .ph-2 {
-    padding-right: 24px;
+    padding-right: 24px!important;
 }
 
 .pr-3,
 .ph-3 {
-    padding-right: 36px;
+    padding-right: 36px!important;
 }
 
 .pr-4,
 .ph-4 {
-    padding-right: 48px;
+    padding-right: 48px!important;
 }
 
 /* MARGIN VERTICAL */
 .mt-sm,
 .mv-sm {
-    margin-top: 6px;
+    margin-top: 6px!important;
 }
 
 .mt-1,
 .mv-1 {
-    margin-top: 12px;
+    margin-top: 12px!important;
 }
 
 .mt-2,
 .mv-2 {
-    margin-top: 24px;
+    margin-top: 24px!important;
 }
 
 .mt-3,
 .mv-3 {
-    margin-top: 36px;
+    margin-top: 36px!important;
 }
 
 .mt-4,
 .mv-4 {
-    margin-top: 48px;
+    margin-top: 48px!important;
 }
 .mt-5,
 .mv-5 {
-    margin-top: 60px;
+    margin-top: 60px!important;
 }
 .mt-6,
 .mv-6 {
-    margin-top: 72px;
+    margin-top: 72px!important;
 }
 
 .mb-sm,
 .mv-sm {
-    margin-bottom: 6px;
+    margin-bottom: 6px!important;
 }
 .mb-1,
 .mv-1 {
-    margin-bottom: 12px;
+    margin-bottom: 12px!important;
 }
 
 .mb-2,
 .mv-2 {
-    margin-bottom: 24px;
+    margin-bottom: 24px!important;
 }
 
 .mb-3,
 .mv-3 {
-    margin-bottom: 36px;
+    margin-bottom: 36px!important;
 }
 
 .mb-4,
 .mv-4 {
-    margin-bottom: 48px;
+    margin-bottom: 48px!important;
 }
 .mb-5,
 .mv-5 {
-    margin-bottom: 60px;
+    margin-bottom: 60px!important;
 }
 .mb-6,
 .mv-6 {
-    margin-bottom: 72px;
+    margin-bottom: 72px!important;
 }
 
 /* MARGIN HORIZONTAL */
+.ml-sm,
+.mh-sm {
+    margin-left: 6px!important;
+}
 .ml-1,
 .mh-1 {
-    margin-left: 12px;
+    margin-left: 12px!important;
 }
 
 .ml-2,
 .mh-2 {
-    margin-left: 24px;
+    margin-left: 24px!important;
 }
 
 .ml-3,
 .mh-3 {
-    margin-left: 36px;
+    margin-left: 36px!important;
 }
-
+.mr-sm,
+.mh-sm {
+    margin-right: 6px!important;
+}
 .mr-1,
 .mh-1 {
-    margin-right: 12px;
+    margin-right: 12px!important;
 }
 
 .mr-2,
 .mh-2 {
-    margin-right: 24px;
+    margin-right: 24px!important;
 }
 
 .mr-3,
 .mh-3 {
-    margin-right: 36px;
+    margin-right: 36px!important;
 }
