sign up front and back-end coding

--- a/src/sass/components.scss
+++ b/src/sass/components.scss
@@ -7,6 +7,10 @@
     background-color: $primaryHover;
     border-color: $primaryHover;
 }
+.btn-secondary {
+    background-color: $secondary;
+    border-color: $secondary
+}
 .btn-outline-primary {
     color: $secondary;
     border-color: $secondary;
