--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -248,6 +248,10 @@ img {
   background-color: #e43737;
   border-color: #e43737; }
 
+.btn-secondary {
+  background-color: #00b3b3;
+  border-color: #00b3b3; }
+
 .btn-outline-primary {
   color: #00b3b3;
   border-color: #00b3b3; }
